# MicroNetworkDevice.Sandbox

./: .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LFrameworkConfig.h  main.cpp
.metadata/: version.ini
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Api/: MicroNetwork.Task.MemoryAccess.cidl
ApiGenerator/: CMakeLists.txt
CMake.Toolchains/: fetch_utils.cmake  stm32_gcc.cmake
Cube/: .cproject  .mxproject  .project  CMakeLists.txt  Cube.ioc  Cube.xml  STM32F746VGTx_FLASH.ld
Cube/Inc/: FreeRTOSConfig.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Cube/Middlewares/ST/STM32_USB_Device_Library_/Core/Inc/: usbd_def.h
Cube/Src/: freertos.c  gpio.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  tim.c  usart.c  usb_otg.c
F7/: .cproject  .gitmodules  .project  CMakeLists.txt  CMakeSettings.json  FreeRTOSConfig.h  InterruptHandlers.c  InterruptHandlers.cpp  LFrameworkConfig.h  PinMap.h  README.md  StLink.cfg  Stm32F7.h  System.cpp  main.cpp  rtos.c  stm32f7xx_hal_conf.h
F7/Cube/: CMakeLists.txt  Cube.ioc  Cube.xml  STM32F746VGTx_FLASH.ld
F7/Cube/Inc/: FreeRTOSConfig.h  main.h  stm32f7xx_hal_conf.h
F7/Cube/Middlewares/ST/STM32_USB_Device_Library_/Core/Inc/: usbd_def.h
F7/Cube/Src/: CMakeLists.txt  freertos.c  gpio.c  stm32f7xx_it.c  usb_otg.c
F7/Cube/startup/: CMakeLists.txt
F7/Interfaces/: MicroNetwork.Common.h  MicroNetwork.Device.h  MicroNetwork.Task.MemoryAccess.HostDeviceInterop.h  MicroNetwork.Task.MemoryAccess.IDeviceToHost.Serializer.Out.h  MicroNetwork.Task.MemoryAccess.IHostToDevice.Serializer.In.h  MicroNetwork.Task.MemoryAccess.IStream.IoStreamDescriptor.h  MicroNetwork.Task.MemoryAccess.h
F7/Tasks/: CMakeLists.txt  MemoryAccess.h  ReadMemoryTask.h
F7/Usb/: CMakeLists.txt  Usb.cpp  Usb.h
F7/cmake/: fetch_utils.cmake  stm32_gcc.cmake
Tools/: Stm32CubeMxExportConfig.ps1
Usb/: Usb.cpp
